--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,7 @@
 # Required metadata
 sonar.projectKey=com.mungu
 sonar.projectName=fighter
-sonar.projectVersion=0.0.1-SNAPSHOT
-
+sonar.projectVersion=1.0
 # Comma-separated paths to directories with sources (required)
 sonar.sources=.
 
