--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,17 @@
 			</plugin>
 		</plugins>
 	</build>
+		<distributionManagement>
+    <snapshotRepository>
+      <id>nexus-repo</id>
+      <url>http://15.206.163.179:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+	<repository>
+	  <id>nexus-repo</id>
+      <url>http://15.206.163.179:8081/repository/maven-releases/</url>
+    </repository>
+  
+  </distributionManagement>
 
 	
 </project>
