--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,26 @@
 		    <artifactId>logback-classic</artifactId>
 		    <version>1.2.3</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/sonar-maven-plugin -->
+                <dependency>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.4.0.905</version>
+                    <type>pom</type>
+                </dependency>
 	</dependencies>
+	 <profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Optional URL to server. Default value is http://localhost:9000 -->
+                <sonar.host.url> http://13.235.87.143:9000 </sonar.host.url>           
+            </properties>
+        </profile>
+     </profiles>
 	
 	<!-- <distributionManagement>
 	    <repository>
